--- a/site/index.html
+++ b/site/index.html
@@ -31,14 +31,79 @@
         </div>
       </nav>
     </div>
-    <div class="intro">
-      <div class="container">
-        <div class="intro-text">
-          <h2 class="meeting">Welcome To <span class="meeting-logo">Pahu Design</span></h2>
-          <h1 class="intro-title">you are in good <br> hands with us</h1>
-        </div>
+  </header>
+  <div class="intro">
+    <div class="container">
+      <div class="intro-text">
+        <h2 class="meeting">Welcome To <span class="meeting-logo">Pahu Design</span></h2>
+        <h1 class="intro-title">you are in good <br> hands with us</h1>
       </div>
     </div>
-  </header>
+  </div>
+  <main>
+    <section class="advantages">
+      <div class="container">
+        <div class="main-title">
+          <h1 class="title-section-text">Why choose us</h1>
+          <img src="img/advantages/stick.png" alt="stick">
+        </div>
+        <div class="advantage-box">
+          <div class="advantage-item">
+
+            <div class="advantage-li">
+              <div class="advantage-text">
+                <h3 class="advantage-li-title">modern design</h3>
+                <p class="advantage-li-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
+                  cum dolorum molestias eius natus quasi est perspiciatis repudiandae?</p>
+              </div>
+              <div class="advantage-icon">
+                <img src="img/advantages/tools.png" alt="tools">
+              </div>
+            </div>
+
+            <div class="advantage-li">
+              <div class="advantage-text">
+                <h3 class="advantage-li-title">unique quality</h3>
+                <p class="advantage-li-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
+                  cum dolorum molestias eius natus quasi est perspiciatis repudiandae?</p>
+              </div>
+              <div class="advantage-icon">
+                <img src="img/advantages/star.png" alt="star">
+              </div>
+            </div>
+
+          </div>
+          <div class="advantage-item">
+            <img src="img/advantages/sofa1.png" alt="sofa">
+          </div>
+          <div class="advantage-item">
+
+            <div class="advantage-li">
+              <div class="advantage-icon">
+                <img src="img/advantages/note.png" alt="tools">
+              </div>
+              <div class="advantage-text">
+                <h3 class="advantage-li-title">honest price</h3>
+                <p class="advantage-li-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
+                  cum dolorum molestias eius natus quasi est perspiciatis repudiandae?</p>
+              </div>
+            </div>
+
+            <div class="advantage-li">
+              <div class="advantage-icon">
+                <img src="img/advantages/phone.png" alt="tools">
+              </div>
+              <div class="advantage-text">
+                <h3 class="advantage-li-title">great support</h3>
+                <p class="advantage-li-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
+                  cum dolorum molestias eius natus quasi est perspiciatis repudiandae?</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
