--- a/site/index.html
+++ b/site/index.html
@@ -52,23 +52,23 @@
 
             <div class="advantage-li">
               <div class="advantage-text">
-                <h3 class="advantage-li-title">modern design</h3>
-                <p class="advantage-li-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
+                <h3 class="advantage-li-title right">modern design</h3>
+                <p class="advantage-li-text right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
                   cum dolorum molestias eius natus quasi est perspiciatis repudiandae?</p>
               </div>
               <div class="advantage-icon">
-                <img src="img/advantages/tools.png" alt="tools">
+                <img class="toolsImg" src="img/advantages/tools.png" alt="tools">
               </div>
             </div>
 
             <div class="advantage-li">
               <div class="advantage-text">
-                <h3 class="advantage-li-title">unique quality</h3>
-                <p class="advantage-li-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
+                <h3 class="advantage-li-title right">unique quality</h3>
+                <p class="advantage-li-text right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
                   cum dolorum molestias eius natus quasi est perspiciatis repudiandae?</p>
               </div>
               <div class="advantage-icon">
-                <img src="img/advantages/star.png" alt="star">
+                <img class="starImg" src="img/advantages/star.png" alt="star">
               </div>
             </div>
 
@@ -80,22 +80,22 @@
 
             <div class="advantage-li">
               <div class="advantage-icon">
-                <img src="img/advantages/note.png" alt="tools">
+                <img class="noteImg" src="img/advantages/note.png" alt="note">
               </div>
               <div class="advantage-text">
-                <h3 class="advantage-li-title">honest price</h3>
-                <p class="advantage-li-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
+                <h3 class="advantage-li-title left">honest price</h3>
+                <p class="advantage-li-text left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
                   cum dolorum molestias eius natus quasi est perspiciatis repudiandae?</p>
               </div>
             </div>
 
             <div class="advantage-li">
               <div class="advantage-icon">
-                <img src="img/advantages/phone.png" alt="tools">
+                <img class="phoneImg" src="img/advantages/phone.png" alt="phone">
               </div>
               <div class="advantage-text">
-                <h3 class="advantage-li-title">great support</h3>
-                <p class="advantage-li-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
+                <h3 class="advantage-li-title left">great support</h3>
+                <p class="advantage-li-text left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa fugiat porro 
                   cum dolorum molestias eius natus quasi est perspiciatis repudiandae?</p>
               </div>
             </div>
