--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
   <header class="header">
@@ -101,6 +103,57 @@
             </div>
 
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="trends">
+      <div class="trends-box">
+
+        <div class="trends-item">
+          <div class="trend-text-title first">
+            <h3 class="trends-text-item color-green">patio furniture vietnam</h3>
+            <a class="trends-link color-green" href="#">
+              <p class="trends-detail color-green">view detail</p>
+              <i class="fas fa-arrow-right view-arrow color-green"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="trends-item">
+          <div class="trend-text-title second">
+            <h3 class="trends-text-item color-blue">design by jarnet park trend 2017</h3>
+            <a class="trends-link color-blue" href="#">
+              <p class="trends-detail color-blue">view detail</p>
+              <i class="fas fa-arrow-right view-arrow color-blue"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="trends-item">
+          
+        </div>
+
+        <div class="trends-item">
+          <div class="trend-text-title third">
+            <h3 class="trends-text-item color-black">ceramics wm munoz</h3>
+            <a class="trends-link color-black" href="#">
+              <p class="trends-detail color-black">view detail</p>
+              <i class="fas fa-arrow-right view-arrow color-black"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="trends-item last">
+          
+        </div>
+
+      </div>
+    </section>
+    <section class="collection">
+      <div class="container">
+        <div class="main-title">
+          <h1 class="title-section-text">our collection</h1>
+          <img src="img/line 2.png" alt="stick">
         </div>
       </div>
     </section>
