our designer blog

--- a/site/index.html
+++ b/site/index.html
@@ -344,6 +344,30 @@
         </div>
       </div>
     </section>
+    <section class="designer">
+      <div class="container">
+        <div class="main-title">
+          <h1 class="title-section-text">our designer</h1>
+          <img src="img/advantages/stick.png" alt="stick">
+        </div>
+        <div class="designer-box">
+          <div class="designer-item">
+            <img src="img/designer1.png" alt="#">
+            <h1 class="designer-name">Bertil Stam</h1>
+          </div>
+
+          <div class="designer-item">
+            <img src="img/designer2.png" alt="#">
+            <h1 class="designer-name">Janet Park</h1>
+          </div>
+
+          <div class="designer-item">
+            <img src="img/designer3.png" alt="#">
+            <h1 class="designer-name">WM Munoz</h1>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
