our project blog

--- a/site/index.html
+++ b/site/index.html
@@ -152,7 +152,7 @@
     <section class="collection">
       <div class="container">
         <div class="main-title">
-          <h1 class="title-section-text">our collection</h1>
+          <h1 class="title-section-text title-black">our collection</h1>
           <img src="img/line 2.png" alt="stick">
         </div>
         <div class="collection-box">
@@ -343,7 +343,7 @@
 
         </div>
       </div>
-    </section>
+    </section> <!--Collection-->
     <section class="designer">
       <div class="container">
         <div class="main-title">
@@ -365,6 +365,97 @@
             <img src="img/designer3.png" alt="#">
             <h1 class="designer-name">WM Munoz</h1>
           </div>
+        </div>
+      </div>
+    </section> <!--Designer-->
+    <section class="project">
+      <div class="container">
+        <div class="main-title">
+          <h1 class="title-section-text title-black">our project</h1>
+          <img src="img/line 2.png" alt="stick">
+        </div>
+      </div>
+      <div class="project-box">
+        <div class="project-item">
+          <h3 class="project-title">modern living room</h3>
+          <div class="project-inner">
+            <p class="project-inner-text">interior design</p>
+          </div>
+        </div>
+
+        <div class="project-item">
+          <h3 class="project-title">modern living room</h3>
+          <div class="project-inner">
+            <p class="project-inner-text">interior design</p>
+          </div>
+        </div>
+
+        <div class="project-item">
+          <h3 class="project-title">modern living room</h3>
+          <div class="project-inner">
+            <p class="project-inner-text">interior design</p>
+          </div>
+        </div>
+
+        <div class="project-item">
+          <h3 class="project-title">modern living room</h3>
+          <div class="project-inner">
+            <p class="project-inner-text">interior design</p>
+          </div>
+        </div>
+
+      </div>
+    </section> <!--Project-->
+    <section class="blog">
+      <div class="container">
+        <div class="main-title">
+          <h1 class="title-section-text title-black">from our blog</h1>
+          <img src="img/line 2.png" alt="stick">
+        </div>
+        <div class="blog-box">
+
+          <div class="blog-item">
+            <img class="blog-img" src="img/blog1.png" alt="#">
+            <div class="blog-inner">
+              <h1 class="blog-title">our new work space</h1>
+              <p class="blog-text">Feel alive! So if you’re looking for, 
+                here is a list of some of the most popular and fiestas the Mardin has 
+                to offer thisfiestas the Mardin has to offer!</p>
+              <div class="blog-button">
+                <a class="blog-link" href="#">Read more</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+              </div>
+            </div>
+          </div>
+
+          <div class="blog-item">
+            <img class="blog-img" src="img/blog2.png" alt="#">
+            <div class="blog-inner">
+              <h1 class="blog-title">modern trend collection</h1>
+              <p class="blog-text">Feel alive! So if you’re looking for, 
+                here is a list of some of the most popular and fiestas the Mardin has 
+                to offer thisfiestas the Mardin has to offer!</p>
+              <div class="blog-button">
+                <a class="blog-link" href="#">Read more</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+              </div>
+            </div>
+          </div>
+
+          <div class="blog-item">
+            <img class="blog-img" src="img/blog3.png" alt="#">
+            <div class="blog-inner">
+              <h1 class="blog-title">a woman thinking</h1>
+              <p class="blog-text">Feel alive! So if you’re looking for, 
+                here is a list of some of the most popular and fiestas the Mardin has 
+                to offer thisfiestas the Mardin has to offer!</p>
+              <div class="blog-button">
+                <a class="blog-link" href="#">Read more</a>
+                <i class="fas fa-long-arrow-alt-right"></i>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
