correct project section stap 2

--- a/site/index.html
+++ b/site/index.html
@@ -376,7 +376,7 @@
         </div>
       </div>
       <div class="project-box">
-        <div class="project-item">
+        <div class="project-item first">
           <h3 class="project-title">modern living room</h3>
           <div class="project-inner">
             <p class="project-inner-text">interior design</p>
@@ -406,7 +406,7 @@
 
       </div>
     </section> <!--Project-->
-    <section class="blog">
+    <section class="blog"> <!--Blog-->
       <div class="container">
         <div class="main-title">
           <h1 class="title-section-text title-black">from our blog</h1>
