--- a/site/index.html
+++ b/site/index.html
@@ -458,7 +458,67 @@
 
         </div>
       </div>
-    </section>
+    </section> <!--Blog-->
   </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-contacts">
+        <div class="contacts-item">
+          <h1 class="contacts-title">call us now</h1>
+          <p class="contacts-text">Office telephone: (251) 546-9442</p>
+          <p class="contacts-text">Hotline: 906-2721</p>
+        </div>
+
+        <div class="contacts-item">
+          <h1 class="contacts-title">come visit us</h1>
+          <p class="contacts-text">123 6th St. </p>
+          <p class="contacts-text">Melbourne, FL 32904</p>
+        </div>
+
+        <div class="contacts-item">
+          <h1 class="contacts-title">send a messenge</h1>
+          <p class="contacts-text">Email: pahudesign@pahu.vn</p>
+          <p class="contacts-text">Inquiries: support@pahu.vn </p>
+        </div>
+      </div>
+      <div class="footer-nav">
+        <div class="nav-item">
+          <img src="img/pahulogo.png" alt="#">
+          <div class="nav-social">
+            <a class="social-inner" href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a class="social-inner" href="#">
+              <i class="fab fa-google-plus-g"></i>
+            </a>
+            <a class="social-inner" href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a class="social-inner" href="#">
+              <i class="fab fa-youtube-square"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="nav-item">
+          <h1 class="social-title">Hours work</h1>
+          <p class="social-text">Monday - Friday: 08:00 am - 17:00 pm.</p>
+          <p class="social-text">Saturday: 09:00 am - 12h30 pm.</p>
+        </div>
+
+        <div class="nav-item">
+          <h1 class="social-title">Newsletter</h1>
+          <form id="adress" action="#">
+            <input id="key" type="text" placeholder="Enter your email...">
+            <button class="button-inner">
+              <i class="fas fa-arrow-right"></i>
+            </button>
+          </form>
+          <p class="social-text">Sign up to get exclusive offers from our favorite brands 
+            and to be well up in the news.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
