--- a/site/index.html
+++ b/site/index.html
@@ -31,6 +31,9 @@
           <a href="#" class="menu-item"><img src="img/favorites.png" alt="heart"></a>
           <a href="#" class="menu-item"><img src="img/basket.png" alt="basket"></a>
         </div>
+
+        <button class="burger-menu"></button>
+
       </nav>
     </div>
   </header>
@@ -344,7 +347,7 @@
         </div>
       </div>
     </section> <!--Collection-->
-    <section class="designer">
+    <section class="designer"> <!--Designer-->
       <div class="container">
         <div class="main-title">
           <h1 class="title-section-text">our designer</h1>
